<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@android:style/Theme.NoTitleBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.SelectYearActivity"
    android:longClickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/abc_action_bar_default_height"
        android:textStyle="bold"
        android:text="ŚUM \nQUIZ"
        android:id="@+id/options_number_of_questions_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/label_select_year"
        android:id="@+id/selectYearLabel"
        android:paddingTop="20dp"
        android:layout_above="@+id/first"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_year"
        android:id="@+id/first"
        android:textAlignment="center"
        android:layout_above="@+id/second"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_year"
        android:id="@+id/second"
        android:layout_above="@+id/third"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_year"
        android:id="@+id/third"
        android:layout_above="@+id/fourth"
        android:layout_alignLeft="@+id/second"
        android:layout_alignStart="@+id/second"
        android:layout_alignRight="@+id/second"
        android:layout_alignEnd="@+id/second"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_year"
        android:id="@+id/fourth"
        android:layout_above="@+id/fifth"
        android:layout_alignLeft="@+id/third"
        android:layout_alignStart="@+id/third"
        android:layout_alignRight="@+id/third"
        android:layout_alignEnd="@+id/third"
        android:enabled="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fifth_year"
        android:id="@+id/fifth"
        android:layout_above="@+id/sixth"
        android:layout_centerHorizontal="true"
        android:enabled="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sixth_year"
        android:id="@+id/sixth"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:enabled="false"/>

</RelativeLayout>


